[package]
name = "day-6"
version = "0.1.0"
authors = ["Øyvind Sigmundson Schøyen <oyvindschoyen@gmail.com>"]
edition = "2018"

[dependencies]
ndarray = { version = "*", features = ["blas"] }
blas-src = { version = "*", default-features = false, features = ["openblas"] }
openblas-src = { version = "*", default-features = false, features = ["cblas", "system"] }
